#
#  TOPPERS Hakoniwa ZumoSim
#      Toyohashi Open Platform for Embedded Real-Time Systems
#      Hakoniwa(a virtual simulation environment) for Zumo
#
#  Copyright (C) 2023-2024 by Center for Embedded Computing Systems
#              Graduate School of Informatis, Nagoya Univ., JAPAN
#
#  上記著作権者は，以下の(1)〜(4)の条件を満たす場合に限り，本ソフトウェ
#  ア（本ソフトウェアを改変したものを含む．以下同じ）を使用・複製・改
#  変・再配布（以下，利用と呼ぶ）することを無償で許諾する．
#  (1) 本ソフトウェアをソースコードの形で利用する場合には，上記の著作
#      権表示，この利用条件および下記の無保証規定が，そのままの形でソー
#      スコード中に含まれていること．
#  (2) 本ソフトウェアを，ライブラリ形式など，他のソフトウェア開発に使
#      用できる形で再配布する場合には，再配布に伴うドキュメント（利用
#      者マニュアルなど）に，上記の著作権表示，この利用条件および下記
#      の無保証規定を掲載すること．
#  (3) 本ソフトウェアを，機器に組み込むなど，他のソフトウェア開発に使
#      用できない形で再配布する場合には，次のいずれかの条件を満たすこ
#      と．
#    (a) 再配布に伴うドキュメント（利用者マニュアルなど）に，上記の著
#        作権表示，この利用条件および下記の無保証規定を掲載すること．
#    (b) 再配布の形態を，別に定める方法によって，TOPPERSプロジェクトに
#        報告すること．
#  (4) 本ソフトウェアの利用により直接的または間接的に生じるいかなる損
#      害からも，上記著作権者およびTOPPERSプロジェクトを免責すること．
#      また，本ソフトウェアのユーザまたはエンドユーザからのいかなる理
#      由に基づく請求からも，上記著作権者およびTOPPERSプロジェクトを
#      免責すること．
#
#  本ソフトウェアは，無保証で提供されているものである．上記著作権者お
#  よびTOPPERSプロジェクトは，本ソフトウェアに関して，特定の使用目的
#  に対する適合性も含めて，いかなる保証も行わない．また，本ソフトウェ
#  アの利用により直接的または間接的に生じたいかなる損害に関しても，そ
#  の責任を負わない．
#

set(HAKO_CMAKE_VERSION ${HAKO_CMAKE_VERSION})

project(hakoniwa-zumo
    LANGUAGES C CXX
)

set(OS_TYPE "posix")
if(WIN32)
    set(OS_TYPE "win")
endif(WIN32)
MESSAGE(STATUS "OS_TYPE=" ${OS_TYPE})

add_library(
    zumosim STATIC
    zumosim.cpp
    actuator/zumo_actuator.cpp
    actuator/zumo_led.cpp
    actuator/zumo_motor.cpp
    sensor/zumo_sensor.cpp
    sensor/zumo_imu.cpp
    sensor/zumo_ir.cpp
    sensor/zumo_lf.cpp
)

target_include_directories(
    zumosim
    PRIVATE ${ZUMO_INTERFACE_DIR}
    PRIVATE /usr/local/include
    PRIVATE /mingw64/include
    PRIVATE ${HAKO_ZUMO_SOURCE_DIR}/actuator
    PRIVATE ${HAKO_ZUMO_SOURCE_DIR}/sensor
    PRIVATE ${HAKO_ZUMO_SOURCE_DIR}/pdu/ros_types/types
    PRIVATE ${HAKO_ZUMO_SOURCE_DIR}/include
    PRIVATE ${HAKO_CPP_SOURCE_DIR}/src/hakoc/src
)

